# 2.11.00 (61455) Feb 17, 2012
# 2.10.03 (61454) Feb 17, 2012
> Fixed: When resetting the sim, switch back to non-roller-coaster mode for future tracks.
> Fixed: When changing "roller coaster" mode through the right-click popup menu, have the result apply to all future tracks
# 2.10.02 (61450) Feb 17, 2012
> When any two tracks join, set the resultant track to be roller coaster mode if either was in roller coaster mode.
# 2.10.01 (61402) Feb 15, 2012
> Fixed: Double Well (roller coaster) in the Tracks menu is loading without roller coaster mode
# 2.10.00 (61021) Feb 4, 2012
# 2.09.05 (61017) Feb 3, 2012
> Nudge up tracks by 1E-2 meters so that the potential energy won't go negative at the bottom of a user-created well
# 2.09.04 (61015) Feb 3, 2012
# 2.09.03 (61014) Feb 3, 2012
> Fixed: Tracks will not connect when dragged directly out of the toolbox
> Moved track toolbox in front of the grid
> When bumping up tracks, make sure they sit at y=0 instead of y=0.1 meters
# 2.09.02 (60933) Feb 1, 2012
> Bump the tracks back onscreen if they are moved out of bounds
# 2.09.01 (60906) Feb 1, 2012
> energy-skate-park-basics: Bump up the tracks if they go below the ground
> Fixed a bug in track building
# 2.09.00 (60887) Jan 31, 2012
> Improvements for control panels
# 2.08.30 (60883) Jan 31, 2012
Energy Skate Park: Fill up the track toolbox when deleting a track (but not when tracks are joined)
Energy Skate Park: Fixed: Pie chart button doesn't reset on "Reset All"
# 2.08.29 (60879) Jan 31, 2012
Energy Skate Park Basics: Fixed: When a user deletes a track, it goes back into the toolbox
Common: Fixed: Deleting a track by deleting its control points causes an exception
# 2.08.28 (60873) Jan 31, 2012
Energy Skate Park: Switched back to sim speed slider instead of radio buttons for this sim
Energy Skate Park: Removed limitation on number of tracks
# 2.08.27 (60857) Jan 31, 2012
Fixed buggy behavior for connecting tracks